--- a/GameTest.html
+++ b/GameTest.html
@@ -52,6 +52,9 @@ let enemyImg = new Image(); enemyImg.src = 'assets/Enemy.png';
 let bulletImg = new Image(); bulletImg.src = 'assets/Bullet.png';
 let boomImg = new Image(); boomImg.src = 'assets/BOOM.png';
 let gunSound = new Audio('assets/gun.mp3');
+let burstSound = new Audio('assets/burst.mp3');
+let bombSound = new Audio('assets/bomb.mp3');
+let bgMusic = new Audio('assets/zamine.mp3'); bgMusic.loop=true; bgMusic.volume=0.5;
 
 // بازیکن
 let player = { x:canvas.width/2, y:canvas.height-200, w:100, h:100, speed:6, lives:5 };
@@ -60,12 +63,16 @@ let player = { x:canvas.width/2, y:canvas.height-200, w:100, h:100, speed:6, liv
 let bullets=[], enemies=[], explosions=[], enemyBullets=[];
 let score=0, startTime=0, lastDifficultyTime=0, enemyShotEnable=false;
 let frame=0;
+let enemiesPassed=0;
 
 // دکمه‌ها
 let moveLeft=false, moveRight=false;
 
 // شلیک بازیکن
-function shoot(){ bullets.push({x:player.x+player.w/2-10,y:player.y-20,w:20,h:20,speed:10}); gunSound.currentTime=0; gunSound.play(); }
+function shoot(){ 
+    bullets.push({x:player.x+player.w/2-10,y:player.y-20,w:20,h:20,speed:10}); 
+    gunSound.currentTime=0; gunSound.play(); 
+}
 
 // کنترل دکمه‌ها
 document.getElementById("btnLeft").addEventListener("touchstart", ()=>moveLeft=true);
@@ -84,7 +91,7 @@ setTimeout(()=>{ startBtn.style.display='block'; },5000);
 let enemySpeedBase = 2;
 let enemyCountBase = 1;
 
-// تابع شروع بازی (بار اول و بازی مجدد)
+// تابع شروع بازی
 function startGame(){
     startTime = Date.now();
     frame = 0;
@@ -98,14 +105,17 @@ function startGame(){
     enemies = [];
     enemyBullets = [];
     explosions = [];
+    enemiesPassed=0;
     score = 0;
     loadingScreen.style.display='none';
+    bgMusic.currentTime=0;
+    bgMusic.play();
     update();
 }
-
-// دکمه شروع
+    // دکمه شروع
 startBtn.addEventListener('click', startGame);
-    // ساخت دشمن با محدودیت تیر
+
+// ساخت دشمن با محدودیت تیر
 function spawnEnemy(){ 
     for(let i=0;i<enemyCountBase;i++){
         let size=80;
@@ -116,7 +126,7 @@ function spawnEnemy(){
             h:size, 
             speed:enemySpeedBase + Math.random()*2,
             shotsFired:0,
-            maxShots: Math.floor(Math.random()*2)+1 // 1 یا 2
+            maxShots: Math.floor(Math.random()*2)+1 // 1 یا 2 تیر
         });
     }
 }
@@ -124,6 +134,7 @@ function spawnEnemy(){
 // شلیک دشمن
 function enemyShoot(enemy){
     enemyBullets.push({x:enemy.x+enemy.w/2-5, y:enemy.y+enemy.h, w:10, h:20, speed:6});
+    burstSound.currentTime=0; burstSound.play();
 }
 
 // آپدیت بازی
@@ -152,13 +163,41 @@ function update(){
     if(player.x<0) player.x=0; 
     if(player.x+player.w>canvas.width) player.x=canvas.width-player.w;
 
-    // حرکت گلوله‌ها
-    bullets.forEach((b,i)=>{ b.y-=b.speed; if(b.y+b.h<0) bullets.splice(i,1); });
+    // حرکت گلوله‌ها و برخورد با تیر دشمن
+    bullets.forEach((b,bi)=>{
+        b.y -= b.speed;
 
-    // حرکت دشمن‌ها و برخورد با بازیکن و تیر بازیکن
+        // برخورد با تیر دشمن
+        for(let ei=enemyBullets.length-1; ei>=0; ei--){
+            let eb = enemyBullets[ei];
+            if(b.x < eb.x + eb.w && b.x + b.w > eb.x &&
+               b.y < eb.y + eb.h && b.y + b.h > eb.y){
+                bullets.splice(bi,1);
+                enemyBullets.splice(ei,1);
+                bombSound.currentTime=0; bombSound.play();
+                return;
+            }
+        }
+
+        if(b.y+b.h<0) bullets.splice(bi,1);
+    });
+
+    // حرکت دشمن‌ها و برخورد با بازیکن، تیر بازیکن، عبور از مرز
     for(let i=enemies.length-1; i>=0; i--){
         let en = enemies[i];
         en.y += en.speed;
+
+        // عبور از مرز خط‌چین
+        if(en.y + en.h > player.y + player.h + 50){
+            enemiesPassed++;
+            enemies.splice(i,1);
+            if(enemiesPassed >= 3){
+                loadingScreen.style.display='flex';
+                loadingText.innerText='بازی مجدد';
+                startBtn.style.display='block';
+            }
+            continue;
+        }
 
         // برخورد با بازیکن
         if(en.x < player.x + player.w && en.x + en.w > player.x &&
@@ -180,6 +219,7 @@ function update(){
                 explosions.push({x:en.x,y:en.y,w:en.w,h:en.h,frame:0});
                 enemies.splice(i,1);
                 bullets.splice(j,1);
+                bombSound.currentTime=0; bombSound.play();
                 score++;
                 break;
             }
@@ -191,7 +231,6 @@ function update(){
             en.shotsFired++;
         }
     }
-
     // حرکت و برخورد تیر دشمن با بازیکن
     for(let i=enemyBullets.length-1; i>=0; i--){
         let eb = enemyBullets[i];
@@ -210,13 +249,13 @@ function update(){
     }
 
     // انفجار
-    for(let i=explosions.length-1;i>=0;i--){
+    for(let i=explosions.length-1;i>=0;i++){
         explosions[i].frame++;
         if(explosions[i].frame>20) explosions.splice(i,1);
     }
 
     draw();
-    if(player.lives>0) requestAnimationFrame(update);
+    if(player.lives>0 && enemiesPassed<3) requestAnimationFrame(update);
 }
 
 // رسم
@@ -229,6 +268,7 @@ function draw(){
     ctx.setLineDash([5,5]);
     ctx.strokeRect(0, player.y+player.h+50, canvas.width, 20);
     ctx.setLineDash([]);
+
     // بازیکن
     ctx.save();
     ctx.translate(player.x+player.w/2,player.y+player.h/2);
