--- a/GameTest.html
+++ b/GameTest.html
@@ -27,7 +27,7 @@ canvas { display:block; margin:0 auto; }
 <body>
 
 <div id="loadingScreen">
-    <div id="loadingText">به بازی AlonePilot خوش آمدید<br>لطفا منتظر بمانید تا بازی لود شود...</div>
+    <div id="loadingText">به بازی خلبان تنها خوش آمدید<br>لطفا منتظر بمانید تا بازی لود شود...</div>
     <button id="startBtn">شروع بازی</button>
 </div>
 
@@ -51,10 +51,20 @@ let playerImg = new Image(); playerImg.src = 'assets/player.png';
 let enemyImg = new Image(); enemyImg.src = 'assets/Enemy.png';
 let bulletImg = new Image(); bulletImg.src = 'assets/Bullet.png';
 let boomImg = new Image(); boomImg.src = 'assets/BOOM.png';
-let gunSound = new Audio('assets/gun.mp3');
-let burstSound = new Audio('assets/burst.mp3');
-let bombSound = new Audio('assets/bomb.mp3');
+
+let gunSoundPool = [], burstSoundPool = [], bombSoundPool = [];
+for(let i=0;i<5;i++){
+    let g = new Audio('assets/gun.mp3'); gunSoundPool.push(g);
+    let b = new Audio('assets/burst.mp3'); burstSoundPool.push(b);
+    let bm = new Audio('assets/bomb.mp3'); bombSoundPool.push(bm);
+}
+
 let bgMusic = new Audio('assets/zamine.mp3'); bgMusic.loop=true; bgMusic.volume=0.5;
+
+// توابع پخش صدا از Pool
+function playGun(){ for(let s of gunSoundPool){ if(s.paused){ s.currentTime=0; s.play(); return; }}}
+function playBurst(){ for(let s of burstSoundPool){ if(s.paused){ s.currentTime=0; s.play(); return; }}}
+function playBomb(){ for(let s of bombSoundPool){ if(s.paused){ s.currentTime=0; s.play(); return; }}}
 
 // بازیکن
 let player = { x:canvas.width/2, y:canvas.height-200, w:100, h:100, speed:6, lives:5 };
@@ -62,8 +72,7 @@ let player = { x:canvas.width/2, y:canvas.height-200, w:100, h:100, speed:6, liv
 // گلوله‌ها و دشمن‌ها
 let bullets=[], enemies=[], explosions=[], enemyBullets=[];
 let score=0, startTime=0, lastDifficultyTime=0, enemyShotEnable=false;
-let frame=0;
-let enemiesPassed=0;
+let frame=0, enemiesPassed=0;
 
 // دکمه‌ها
 let moveLeft=false, moveRight=false;
@@ -71,7 +80,7 @@ let moveLeft=false, moveRight=false;
 // شلیک بازیکن
 function shoot(){ 
     bullets.push({x:player.x+player.w/2-10,y:player.y-20,w:20,h:20,speed:10}); 
-    gunSound.currentTime=0; gunSound.play(); 
+    playGun(); 
 }
 
 // کنترل دکمه‌ها
@@ -90,8 +99,7 @@ setTimeout(()=>{ startBtn.style.display='block'; },5000);
 // پایه‌های دشمن
 let enemySpeedBase = 2;
 let enemyCountBase = 1;
-
-// تابع شروع بازی
+// شروع بازی
 function startGame(){
     startTime = Date.now();
     frame = 0;
@@ -112,7 +120,8 @@ function startGame(){
     bgMusic.play();
     update();
 }
-    // دکمه شروع
+
+// دکمه شروع
 startBtn.addEventListener('click', startGame);
 
 // ساخت دشمن با محدودیت تیر
@@ -126,7 +135,7 @@ function spawnEnemy(){
             h:size, 
             speed:enemySpeedBase + Math.random()*2,
             shotsFired:0,
-            maxShots: Math.floor(Math.random()*2)+1 // 1 یا 2 تیر
+            maxShots: Math.floor(Math.random()*2)+1
         });
     }
 }
@@ -134,7 +143,7 @@ function spawnEnemy(){
 // شلیک دشمن
 function enemyShoot(enemy){
     enemyBullets.push({x:enemy.x+enemy.w/2-5, y:enemy.y+enemy.h, w:10, h:20, speed:6});
-    burstSound.currentTime=0; burstSound.play();
+    playBurst();
 }
 
 // آپدیت بازی
@@ -167,14 +176,13 @@ function update(){
     bullets.forEach((b,bi)=>{
         b.y -= b.speed;
 
-        // برخورد با تیر دشمن
         for(let ei=enemyBullets.length-1; ei>=0; ei--){
             let eb = enemyBullets[ei];
             if(b.x < eb.x + eb.w && b.x + b.w > eb.x &&
                b.y < eb.y + eb.h && b.y + b.h > eb.y){
                 bullets.splice(bi,1);
                 enemyBullets.splice(ei,1);
-                bombSound.currentTime=0; bombSound.play();
+                playBomb();
                 return;
             }
         }
@@ -182,7 +190,7 @@ function update(){
         if(b.y+b.h<0) bullets.splice(bi,1);
     });
 
-    // حرکت دشمن‌ها و برخورد با بازیکن، تیر بازیکن، عبور از مرز
+    // حرکت دشمن‌ها و برخورد با بازیکن و تیر بازیکن و مرز
     for(let i=enemies.length-1; i>=0; i--){
         let en = enemies[i];
         en.y += en.speed;
@@ -219,19 +227,19 @@ function update(){
                 explosions.push({x:en.x,y:en.y,w:en.w,h:en.h,frame:0});
                 enemies.splice(i,1);
                 bullets.splice(j,1);
-                bombSound.currentTime=0; bombSound.play();
+                playBomb();
                 score++;
                 break;
             }
         }
-
         // شلیک دشمن با محدودیت
         if(enemyShotEnable && en.shotsFired < en.maxShots && Math.random()<0.01){ 
             enemyShoot(en); 
             en.shotsFired++;
         }
     }
-    // حرکت و برخورد تیر دشمن با بازیکن
+
+    // تیر دشمن و برخورد با بازیکن
     for(let i=enemyBullets.length-1; i>=0; i--){
         let eb = enemyBullets[i];
         eb.y += eb.speed;
@@ -249,7 +257,7 @@ function update(){
     }
 
     // انفجار
-    for(let i=explosions.length-1;i>=0;i++){
+    for(let i=explosions.length-1;i>=0;i--){
         explosions[i].frame++;
         if(explosions[i].frame>20) explosions.splice(i,1);
     }
